<resources>
    <string name="app_name">TestNFC</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="read4442">读4442卡</string>
    <string name="clear">清除日志</string>
    <string name="write4442">写4442卡</string>
    <string name="read102">读102卡</string>
    <string name="write102">写102卡</string>
    <string name="cardID">卡号</string>
    <string name="Gas">卡上气量</string>
    <string name="Times">次数</string>
    <string name="BuyGas">购气量</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>