<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/textview_cardid"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:textSize="20dp"
                android:text="@string/cardID" />

            <TextView
                android:id="@+id/textview_cardid2"
                android:layout_width="300dp"
                android:textSize="20dp"
                android:layout_height="40dp" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/textview_gas"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:text="@string/Gas" />

            <TextView
                android:id="@+id/edittext_gas2"
                android:layout_width="match_parent"
                android:layout_height="40dp" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/textview_times"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:text="@string/Times" />

            <TextView
                android:id="@+id/edittext_times2"
                android:layout_width="match_parent"
                android:layout_height="40dp" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/textview_buygas"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:text="@string/BuyGas" />

            <EditText
                android:id="@+id/edittext_buygas"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:digits="0123456789"
                android:inputType="number"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">
        <Button
            android:id="@+id/button_read_4442"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/read4442"
            android:layout_gravity="center"
            />

        <Button
            android:id="@+id/button_write_4442"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/write4442"
            android:layout_gravity="center"
            />


        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">
            <Button
                android:id="@+id/button_read_102"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/read102"
                android:layout_gravity="center"
                />

            <Button
                android:id="@+id/button_write_102"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/write102"
                android:layout_gravity="center"
                />

        </androidx.appcompat.widget.LinearLayoutCompat>
        <Button
            android:id="@+id/button_clear"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/clear"
            android:layout_gravity="center"
            />
        <TextView
            android:id="@+id/textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollHorizontally="true"
           />

    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.constraintlayout.widget.ConstraintLayout>